Added pizza table and map

--- a/markdown/ShinyWithMarkdown.Rmd
+++ b/markdown/ShinyWithMarkdown.Rmd
@@ -110,7 +110,7 @@ sliderInput(
 radioButtons(
     inputId='PlotColor',
     label='Choose a color',
-    choices=list('red', 'green', 'blue')
+    choices=list('red', 'lightgreen'='green', 'blue')
 )
 
 renderPlot(
